spacing issue fixes

--- a/scss/_article-hero.scss
+++ b/scss/_article-hero.scss
@@ -4,6 +4,7 @@
 	min-height: 457px;
 	height: auto;
 	position: relative;
+	margin-top: -52px;
 	.article__para, p, .article__cont div, li {
 		text-align: left;
 		text-shadow: $jmTextShadow1;
