--- a/scss/_richtext.scss
+++ b/scss/_richtext.scss
@@ -20,6 +20,7 @@
 	ul {
 		padding-bottom: 10px;
 		margin-left: 50px;
+		margin-bottom: 0;
 		li {
 			padding: 10px 0px;
 			list-style: revert;
